plugins {
    id 'org.springframework.boot' version '2.2.5.RELEASE'
    id 'io.spring.dependency-management' version '1.0.9.RELEASE'
    id 'java'
}

apply plugin: "jacoco"

group = 'com.example'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '13'
targetCompatibility = '13'

mainClassName = "com.kakao.bot.intent.JenkinsApplication"

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation('org.springframework.boot:spring-boot-starter-test') {
        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
    }
    testImplementation 'io.projectreactor:reactor-test'
}

compileJava {
    options.compilerArgs = [
            '-Amapstruct.suppressGeneratorTimestamp=true',
            '-Amapstruct.suppressGeneratorVersionInfoComment=true',
            '-Xlint:preview',
            '--enable-preview'
    ]
}

/**
 * java 13 enable preview
 */
tasks.withType(JavaCompile).each {
    it.options.compilerArgs.add('--enable-preview')
    it.options.compilerArgs.add('-Xlint:preview')
}

test {
    useJUnitPlatform()
    jvmArgs(['--enable-preview'])
}

distributions {
    distTar.enabled = false
    distZip.enabled = false
    bootDistTar.enabled = false
    bootDistZip.enabled = false
}

jacocoTestReport {
    reports {
        xml.enabled true
        html.enabled true
    }
}
